2009-09-09  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_maybe_redirect): New function to possibly
	redirect clients before they are reparented to the frame.
	* matchbox/comp-mgr/mb-wm-comp-mgr.[ch]: Add maybe_redirect class
	function for the above.
	* matchbox/core/mb-wm-client-base.c (mb_wm_client_base_realize): Call
	mb_wm_comp_mgr_client_maybe_redirect before reparenting the frame.
	Fixes: NB#122341 - Image viewer draws the content 3 times when it
	starts

2009-09-04  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.63

2009-09-02  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-wm-decor.c (mb_wm_decor_button_press_handler):
	While we are in the loop processing other X events, keep a reference
	for the parent client to avoid crash when the client is unreferenced
	while the button is pressed (e.g. long press).  Make sure that the
	'transients' list is freed and the button is unreferenced every time.

2009-09-01  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.62

2009-08-31  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	revert NB#134557, bits of it may be useful later

2009-08-31  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.61

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_set_client_redirection): Use
	CompositeRedirectAutomatic instead of CompositeRedirectManual when
	(un)redirecting subwindows, it fixes the problem with black browser
	thumbnails when in task switcher.

	Release 0.2.60

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_set_client_redirection): Add support for
	(un)redirecting dialogs, menus etc.

2009-08-31  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-wm-client-window.c
	* matchbox/core/mb-wm-client-window.h
	* matchbox/core/mb-wm-types.h
	* matchbox/core/mb-wm-atoms.c:
	  Get _HILDON_PORTRAIT_MODE_REQUEST of windows when they're mapped.