@@ -1,3 +1,14 @@
+2009-09-09  Gordon Williams <gordon.williams@collabora.co.uk>
+
+	Fixes: NB#119749 - Redundant exposure causing glitches on rotation
+	
+	* matchbox/core/mb-window-manager.c
+	* matchbox/core/mb-window-manager.h: emit a signal 
+	  MBWindowManagerSignalRootConfigure when the root window gets 
+	  reconfigured (picked up by hildon-desktop). And ignore a
+	  root configure if we just got reconfigured to the same
+	  size as before.
+
 2009-09-09  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
 
 	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
